projeto-02-docker-nginx/infra/Gateway-Api/httproute-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: react-nginx
  namespace: helm-teste
spec:
  parentRefs:
  - name: main-gateway
  hostnames:
  - "app.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: react-nginx"
      port: 80
