projeto-02-docker-nginx/infra/Gateway-Api/httproute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: default
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
#  hostnames:
#  - "grafana.local"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: "/grafana"     
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
