projeto-02-docker-nginx/infra/Gateway-Api/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: react-nginx
  namespace: monitoring
spec:
  parentRefs:
  - name: prometheus
  hostnames:
  - "app.prometheus"
  rules:
    backendRefs:
    - name: kube-prometheus-stack-prometheus
      port: 9090
